--- a/404.html
+++ b/404.html
@@ -3,4 +3,4 @@ title : 404
 ---
 
 <title>{{ site.title }}</title>
-<img src="https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/yellow.jpg" alt="替代文本" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>
+<img src="https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/balck.jpg" alt="替代文本" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>
