--- a/404.html
+++ b/404.html
@@ -2,5 +2,5 @@
 title : 404
 ---
 
-<title>"404页面"</title>
-<img src="https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/black.jpg" alt="替代文本" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>
+<title>404页面</title>
+<img src="https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/black.jpg" alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>
