--- a/404.html
+++ b/404.html
@@ -5,13 +5,13 @@ title : 404
 <title>404页面</title>
 
 <script language=Javascript>
-	var now=new Date()
-
-<!--[if now.getSeconds()%2 == 1]>
+	var now=new Date();
+	var n=Math.floor(now.getSeconds()/2);
+<!--[if n == 1]>
 <img src="https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/black.jpg" alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>
 <![endif]-->
 
-<!--[if now.getSeconds()%2 == 0]>
+<!--[if n == 0]>
 <img src="https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/yellow.jpg" alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>
 <![endif]-->
 
