--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@ title : 404
 <script language=Javascript>
 	var now=new Date();
 	var n=Math.floor(now.getSeconds()/2);
+	alert(n);
 <!--[if n == 1]>
 <img src="https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/black.jpg" alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>
 <![endif]-->
