--- a/404.html
+++ b/404.html
@@ -4,17 +4,33 @@ title : 404
 
 <title>404页面</title>
 
-<script language=Javascript>
-	var now=new Date();
-	var n=Math.floor(now.getSeconds()/2);
-	alert(n);
-<!--[if n == 1]>
-<img src="https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/black.jpg" alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>
-<![endif]-->
+<script language="JavaScript">
+<!--
+today=new Date();
+jran=today.getTime();
+function rnd()
+{  ia=9301;
+   ic=49297;
+   im=233280;
+    jran = (jran*ia+ic) % im;
+    return jran/(im*1.0);
+ };
+function rand(number)
+   {
+     return Math.ceil(rnd()*number);
+   };
+document.write();
+for(i=1;i<=1;i++)
+  {
+    myNum=(rand(2)); //其中的“5”改成你要随机显示的图片数，对应如下地址；
+if(myNum == 1) document.write("<img src='https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/black.jpg' alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>");//图片地址，注意编号！
+if(myNum == 2) document.write("<img src='https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/yellow.jpg' alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>");
 
-<!--[if n == 0]>
-<img src="https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/yellow.jpg" alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>
-<![endif]-->
-
-
+    else
+     {   document.write();
+     }
+};
+document.write();
+-->
 </script>
+
