--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ title : 404
 ---
 
 <title>404页面</title>
-
+<!--
 <script language="JavaScript">
 <!--
 today=new Date();
@@ -34,3 +34,6 @@ document.write();
 -->
 </script>
 
+-->
+
+<a href = ><img src='https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/yellow.jpg' alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>
