--- a/404.html
+++ b/404.html
@@ -22,10 +22,12 @@ function rand(number)
 document.write();
 for(i=1;i<=1;i++)
   {
-    myNum=(rand(2)); //其中的“5”改成你要随机显示的图片数，对应如下地址；
-if(myNum == 1) document.write("<img src='https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/black.jpg' alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>");
-if(myNum == 2) document.write("<img src='https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/yellow.jpg' alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>");
-
+    myNum=(rand(5)); //其中的“5”改成你要随机显示的图片数，对应如下地址；
+if(myNum == 1) document.write("<a href = ><img src='http://www.zntec.cn/01.gif' border = 0>");//图片地址，注意编号！
+if(myNum == 2) document.write("<a href = ><img src='http://www.zntec.cn/02.gif' border = 0>");
+if(myNum == 3) document.write("<a href = ><img src='http://www.zntec.cn/03.gif' border = 0>");
+if(myNum == 4) document.write("<a href = ><img src='http://www.zntec.cn/04.gif' border = 0>");
+if(myNum == 5) document.write("<a href = ><img src='http://www.zntec.cn/05.gif' border = 0>");
     else
      {   document.write();
      }
@@ -33,6 +35,7 @@ if(myNum == 2) document.write("<img src='https://raw.github.com/franzzzz/franzzz
 document.write();
 -->
 </script>
+
 
 <!--
 <img src='https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/yellow.jpg' alt="恭喜你找到王狗蛋的第404个宝藏啦！" title="恭喜你找到王狗蛋的第404个宝藏啦！" width="100%" height="97%"/>
