--- a/404.html
+++ b/404.html
@@ -22,12 +22,10 @@ function rand(number)
 document.write();
 for(i=1;i<=1;i++)
   {
-    myNum=(rand(5)); //其中的“5”改成你要随机显示的图片数，对应如下地址；
-if(myNum == 1) document.write("<a href = ><img src='http://www.zntec.cn/01.gif' border = 0>");//图片地址，注意编号！
-if(myNum == 2) document.write("<a href = ><img src='http://www.zntec.cn/02.gif' border = 0>");
-if(myNum == 3) document.write("<a href = ><img src='http://www.zntec.cn/03.gif' border = 0>");
-if(myNum == 4) document.write("<a href = ><img src='http://www.zntec.cn/04.gif' border = 0>");
-if(myNum == 5) document.write("<a href = ><img src='http://www.zntec.cn/05.gif' border = 0>");
+    myNum=(rand(2)); //其中的“5”改成你要随机显示的图片数，对应如下地址；
+if(myNum == 1) document.write("<a href = ><img src='https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/black.jpg' border = 0>");//图片地址，注意编号！
+if(myNum == 2) document.write("<a href = ><img src='https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/yellow.jpg' border = 0>");
+
     else
      {   document.write();
      }
