更新404页面地址

--- a/404.html
+++ b/404.html
@@ -23,8 +23,8 @@ document.write();
 for(i=1;i<=1;i++)
   {
     myNum=(rand(2)); //其中的“5”改成你要随机显示的图片数，对应如下地址；
-if(myNum == 1) document.write("<a href = ><img src='https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/black.jpg'  width='100%' height='96%' border = 0>");//图片地址，注意编号！
-if(myNum == 2) document.write("<a href = ><img src='https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/yellow.jpg'  width='100%' height='96%' border = 0>");
+if(myNum == 1) document.write("<a href = ><img src='https://github.com/franzzzz/franzzzz.github.com/blob/master/pic/black.jpg'  width='100%' height='96%' border = 0>");//图片地址，注意编号！
+if(myNum == 2) document.write("<a href = ><img src='https://github.com/franzzzz/franzzzz.github.com/blob/master/pic/yellow.jpg'  width='100%' height='96%' border = 0>");
 
     else
      {   document.write();
